--- a/composer.json
+++ b/composer.json
@@ -3,11 +3,20 @@
     "symfony/dependency-injection": "~3.3",
     "symfony/console": "~3.3",
     "symfony/yaml": "~3.3",
-    "symfony/config": "~3.3"
+    "symfony/config": "~3.3",
+    "symfony/http-kernel": "~3.3",
+    "symfony/security-bundle": "~3.3",
+    "alcaeus/mongo-php-adapter": "^1.1",
+    "doctrine/mongodb-odm": "^1.1",
+    "doctrine/mongodb-odm-bundle": "^3.0"
   },
+  "provide": {
+    "ext-mongo": "1.6.14"
+  },
+
   "autoload": {
     "psr-4": {
-      "CDI\\": "src/"
+      "": "src/"
     }
   }
 }
